Updated styles to stop the time element from wrapping

--- a/assets/patterns/messages/_messages.scss
+++ b/assets/patterns/messages/_messages.scss
@@ -1,21 +1,27 @@
-.message-table__data {
-  font-weight: bold;
-  &:first-child {
-    padding-left: 10px;
-  }
-  &:last-child {
-    padding-right: 10px;
-    white-space: nowrap;
-  }
-}
+.message-inbox__list {
+  display: table;
+  width: 100%;
+  border-top: 1px solid #a1acb2;
 
-.messages-table__row--read {
-  background-color: #f8f8f8;
-  .message-table__data {
-    font-weight: normal;
+  .message-inbox__list-item {
+    display: table-row;
+    width: 100%;
+    font-weight: bold;
+    a:link{
+      text-decoration: none;
+    }
+    &.message-inbox__list-item--read {
+      background-color: #f8f8f8;
+      font-weight: normal;
+    }
   }
-}
 
-.messages-table__link {
-  text-decoration: none;
+  .message-inbox__block {
+    display: table-cell;
+    padding: 20px 10px;
+    border-bottom: 1px solid #a1acb2;
+    &.no-wrap {
+      white-space: nowrap;
+    }
+  }
 }
